# Robco-Patcher-VR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: PCH.h  PatchDiagnostics.cpp  PatchDiagnostics.h  VRCompat.h  Version.h  gameforms.cpp  gameforms.h  main.cpp  object_alch.cpp  object_alch.h  object_ammos.cpp  object_ammos.h  object_armors.cpp  object_armors.h  object_cobjs.cpp  object_cobjs.h  object_explosion.cpp  object_explosion.h  object_formlist.cpp  object_formlist.h  object_leveledLists.cpp  object_leveledLists.h  object_misc.cpp  object_misc.h  object_npcs.cpp  object_npcs.h  object_omod.cpp  object_omod.h  object_outfit.cpp  object_outfit.h  object_projectile.cpp  object_projectile.h  object_races.cpp  object_races.h  object_weapons.cpp  object_weapons.h  utility.cpp  utility.h
tests/: PatchDiagnosticsTests.cpp
